# dev_challenge_magicmedia

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  grpc_dataclasses.py  grpc_handlers.py  locust.conf_template  locust_vacancy_user.py  locustfile.py  logger_setup.py  sanity_check.py  test_users_template.json  user_signin.py  vacancies_main.py  vacancy_handler.py
src/proto_py/: auth_service_pb2.py  auth_service_pb2_grpc.py  rpc_create_vacancy_pb2.py  rpc_signin_user_pb2.py  rpc_signup_user_pb2.py  rpc_update_vacancy_pb2.py  user_pb2.py  user_service_pb2.py  user_service_pb2_grpc.py  vacancy_pb2.py  vacancy_service_pb2.py  vacancy_service_pb2_grpc.py
