[tool.poetry]
name = "dev-challenge-magicmedia"
version = "0.1.0"
description = ""
authors = ["gsalomone <gianfranco.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.26.0"
python-dotenv = "^1.0.1"
grpcio = "^1.62.2"
grpcio-tools = "^1.62.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
